labeler/k8s/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: labeler
  namespace: mcp-bom
spec:
  gateways:
    - istio-system/arunlabs-public-gateway
  hosts:
    - mcpbom.arunlabs.com
  http:
    - route:
        - destination:
            host: labeler
            port:
              number: 80
